# sentinel-fraud-ops

./: .codeiumignore  .dockerignore  .env.example  .gitignore  CATBOOST_ERROR_ANALYSIS_AND_IMPROVEMENTS.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  temp_file.py
.github/workflows/: ci.yml
backend/: Dockerfile  main.py  requirements.txt  schemas.py
config/: config.py  params.yaml
dashboard/: DASHBOARD_ANALYSIS.md  Dockerfile  api_client.py  app.py  config.py  requirements.txt  styles.py  utils.py
dashboard/pages/: executive.py  frorensics.py  ml.py  ops.py  strategy.py
dashboard/views/: executive.py  forensics.py  ml.py  ops.py  strategy.py
models/prod_v1/: categorical_features.json  cb_features.json  cb_threshold.json  feature_baseline.json  lgb_features.json  lgb_threshold.json  production_config.json  xgb_features.json  xgb_threshold.json
notebooks/: 01_exploration.ipynb  02_train_model.ipynb
notebooks/.ipynb_checkpoints/: 01_exploration-checkpoint.ipynb
scripts/: download_data.py
simulator/: Dockerfile  producer.py  requirements.txt
src/sentinel/: calibration.py  evaluation.py  exceptions.py  features.py  inference.py  modeling.py  monitoring.py  preprocessing.py  validation.py
tests/: conftest.py  load_test.py  requirements.txt  run_test.sh  test_api.py  test_evaluation.py  test_integration.py  test_ml_pipeline.py  test_monitoring.py  test_pipeline.py  test_preprocessing.py  test_worker.py
worker/: Dockerfile  metrics.py  processor.py  processor_worker.py  requirements.txt
